@@ -89,13 +89,6 @@
                         --add-modules jdk.unsupported.desktop --add-exports java.desktop/jdk.swing.interop=ALL-UNNAMED
                     </jvmArguments>
                 </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
@@ -175,6 +168,20 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.zyneonstudios.apex.nexapp.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -200,7 +207,7 @@
                                     <goal>jpackage</goal>
                                 </goals>
                                 <configuration>
-                                    <input>${project.build.directory}</input>
+                                    <input>target</input>
                                     <destination>${project.build.directory}/jpackage</destination>
                                     <name>${name}</name>
                                     <appVersion>${version}</appVersion>
@@ -209,6 +216,12 @@
                                     <mainClass>com.zyneonstudios.apex.nexapp.Main</mainClass>
                                     <!--icon>${project.basedir}/src/main/html/favicon.ico</icon-->
                                     <type>APP_IMAGE</type>
+                                    <arguments>
+                                        <argument>--add-modules</argument>
+                                        <argument>jdk.unsupported.desktop</argument>
+                                        <argument>--add-exports</argument>
+                                        <argument>java.desktop/jdk.swing.interop=ALL-UNNAMED</argument>
+                                    </arguments>
                                 </configuration>
                             </execution>
                         </executions>
